buildscript {
    repositories {
        maven { url "https://maven.neoforged.net/releases" }
        maven { url "https://plugins.gradle.org/m2/" }
        maven { url 'https://repo.spongepowered.org/maven' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.neoforged.gradle', name: 'userdev', version: '7.1.11'
        classpath group: 'net.neoforged.gradle', name: 'common', version: '7.1.11'
        classpath "com.gradleup.shadow:shadow-gradle-plugin:9.2.2"
    }
}

apply plugin: 'net.neoforged.gradle.userdev'
apply plugin: 'net.neoforged.gradle.common'
//Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'com.gradleup.shadow'

configurations {
    shade
    implementation.extendsFrom shade
    minecraftLibrary
    implementation.extendsFrom minecraftLibrary
}

java {
    withSourcesJar()
}

repositories {
    exclusiveContent {
        forRepository {
            maven {
                url "https://cursemaven.com"
            }
        }
        filter {
            includeGroup "curse.maven"
        }
    }
}

String umcVersion = "1.3.1"
if (!"release".equalsIgnoreCase(System.getProperty("target"))) {
    try {
        umcVersion += "-" + 'git rev-parse --verify --short=7 HEAD'.execute().text.trim()
    } catch (Exception ex) {
        umcVersion += "-unknown"
    }
}
version = "1.21.1-neoforge-" + umcVersion
group = "cam72cam.universalmodcore" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = "UniversalModCore"

java.toolchain.languageVersion = JavaLanguageVersion.of(21)
println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))

// Default run configurations.
// These can be tweaked, removed, or duplicated as needed.
runs {
    // applies to all the run configs below
    configureEach {
        //Enable mixin-ed dependency in deobfuscated environment
        systemProperty "mixin.env.remapRefMap", "true"
        systemProperty "mixin.env.refMapRemappingFile", "${projectDir}/build/createSrgToMcp/output.srg"

        systemProperty "mixin.debug.verbose", "true"
        systemProperty "mixin.debug.export", "true"
        // Recommended logging data for a userdev environment
        // The markers can be added/remove as needed separated by commas.
        // "SCAN": For mods scan.
        // "REGISTRIES": For firing of registry events.
        // "REGISTRYDUMP": For getting the contents of all registries.
        systemProperty 'forge.logging.markers', 'REGISTRIES'

        // Recommended logging level for the console
        // You can set various levels here.
        // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
        systemProperty 'forge.logging.console.level', 'debug'

        dependencies {
            runtime project.configurations.minecraftLibrary
        }

        modSource project.sourceSets.main
    }

    client {
        // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
        systemProperty 'neoforge.enabledGameTestNamespaces', 'universalmodcore'
    }

    server {
        systemProperty 'neoforge.enabledGameTestNamespaces', 'universalmodcore'
        argument '--nogui'
    }

    // This run config launches GameTestServer and runs all registered gametests, then exits.
    // By default, the server will crash when no gametests are provided.
    // The gametest system is also enabled by default for other run configs under the /test command.
    gameTestServer {
        systemProperty 'neoforge.enabledGameTestNamespaces', 'universalmodcore'
    }

    data {
        // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
        // workingDirectory project.file('run-data')

        // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
        arguments.addAll '--mod', 'universalmodcore', '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

accessTransformers {
    file 'src/main/resources/META-INF/accesstransformer.cfg'
}

repositories {
    mavenCentral()
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven { url = "https://repo.spongepowered.org/maven" }
}

dependencies {
    implementation "net.neoforged:neoforge:21.1.216"
    // you may put jars on which you depend on in ./libs
    // or you may define them like so..
    //compile "some.group:artifact:version:classifier"
    //compile "some.group:artifact:version"

    // real examples
    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env

    // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
    //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'

    // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
    // except that these dependencies get remapped to your current MCP mappings
    //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
    //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'

    // for more info...
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html
//    annotationProcessor('org.spongepowered:mixin:0.8.3:processor')
//    annotationProcessor('io.github.llamalad7:mixinextras-common:0.5.0')

    //testImplementation ('junit:junit:4.13')
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.2'

    minecraftLibrary(shade group: 'javax.vecmath', name: 'vecmath', version: '1.5.2')
//    implementation(shade group: 'at.yawk.lz4', name: 'lz4-java', version: '1.10.2')
}

repositories {
    maven {
        //LDL
        name = "Gegy"
        url = uri("https://maven.gegy.dev")
    }
}

var mappingsAttribute = Attribute.of("net.minecraft.mappings", String.class)

dependencies {
    attributesSchema {
        attribute(mappingsAttribute)
    }

    //Iris
    implementation "curse.maven:sodium-394468:6382651"
    implementation "curse.maven:irisshaders-455508:6661598"

    //Lamb Dynamic Lights
    compileOnly("dev.lambdaurora.lambdynamiclights:lambdynamiclights-api:4.8.7+1.21.1") {
        attributes {
            attribute(mappingsAttribute, "mojmap")
        }
    }
    runtimeOnly "curse.maven:lambdynamiclights-393442:7306458"
}

//mixin {
//    add sourceSets.main, 'mixins.universalmodcore.refmap.json'
//
//    config 'mixins.universalmodcore.json'
//
//    //Dev environment setup
//    debug.verbose = true
//    debug.export = true
//    dumpTargetOnFailure = true
//}

jar {
    archiveClassifier = 'slim'
    manifest {
        attributes([
                "Specification-Title": "universalmodcore",
                "Specification-Vendor": "",
                "Specification-Version": "1", // We are version 1 of ourselves
                "Implementation-Title": project.name,
                "Implementation-Version": umcVersion,
                "Implementation-Vendor" :"",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

//No need in Neoforge
//jar.finalizedBy('reobfJar')

shadowJar {
    archiveClassifier = ''
    configurations = [project.configurations.shade]
    relocate 'javax.vecmath', "${project.group}.shade.javax.vecmath"
    //Don't do this
//    relocate 'org.spongepowered', "${project.group}.shade.org.spongepowered"
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    mergeServiceFiles()
//    finalizedBy 'reobfShadowJar'
}

assemble.dependsOn shadowJar

//reobf {
//    shadowJar {}
//}

test {
    useJUnit()
    maxHeapSize = '1G'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
            artifact shadowJar
            artifact sourcesJar
            artifactId archivesBaseName
        }
    }
    repositories {
        maven {
            url "sftp://teamopenindustry.cc:22/var/www/html/maven/"
            credentials {
                username = "mavenci"
                password = System.getenv("MAVENCI_PASS")
            }
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

tasks.register('showBuildInfo') {
    doLast {
        System.out.println("Build Uploaded to Maven at: ")
        System.out.println("https://teamopenindustry.cc/maven/cam72cam/universalmodcore/UniversalModCore/${version}/UniversalModCore-${version}.jar")
    }
}

publish.finalizedBy showBuildInfo